# Documents

./: .gitignore  GCD_BruteForce_UCLN.cpp  GCD_Euclid_UCLN.cpp  HelloWorld.cpp
BeagleBoneBlack/: Build_Uboot_for_BBB.docx  Build_kernel_for_BBB.docx  Connect BBB to PC via Ethernet.docx  Note.txt  Note.xlsx  Setup Serial Debug via Minicom.docx  Share internet from PC to BBB via USB.docx
C_C++_NANG_CAO/Tieng Viet/: Thư_viện_chuẩn_C++_Standard_Template_Library_(STL).ppt
Linux/BSP/: rtos_techtalk2004.ppt
Linux/Linux OS/: MỘT SỐ CÂU LỆNH TRONG LINUX.docx
Linux/Linux OS/Share may that va may ao/: Chia se du lieu.docx  Chia se tai nguyen trong Ubuntu.doc  SHARE DỮ LIỆU GIỮA MÁY LINUX ẢO TRÊN VMWARE VÀ MÁY WINDOWS.docx  dv_samba.doc  ~$ia se tai nguyen trong Ubuntu.doc
Linux/Linux programming/: Gdb command.txt  Gtest_framework.7z  LinuxCommandNote.txt  ShareFolderVirtualBox.txt  ShellProgramming.doc  Wayland.docx  Writing device drivers in Linux.docx  coverage.sh  haproxy.rar
Linux/Linux programming/cmake/: CMake_Note.txt
Linux/Linux programming/linux_kernel/: build kernel.txt  get source.txt  setup.txt
Linux/Linux programming/log4cpp/: log4cpp_example.cpp
Linux/Linux programming/makefile/: Makefile  config.mk  main  main.cpp
Linux/Linux programming/valgrind/: Introduce valgrind.docx
Linux/Linux training/Bootloader/: training_boot_loader.ppt
Linux/Linux training/File System/: training_file_system.ppt
Linux/Linux training/Multiple processes and threads/sample/shared memory/: CMakeLists.txt  proc1.cpp  proc2.cpp  sem.cpp  sem.h  share_mem.h
(+35 files in other folders)
